<resources>
    <string name="app_name">Nômades\nbeta</string>
    <string name="saudacao">Bem-vindo(a) ao Nômades</string>
    <string name="saudacao_inferior">Entre ou registre-se para começar</string>
    <string name="logo">logo</string>
    <string name="nomades_nmobile">mobile beta</string>
    <string name="inicar_nsess_o">LOGIN</string>
    <string name="usu_rio">Email</string>
    <string name="senha">Senha</string>
    <string name="registre_se">Registre-se</string>
    <string name="cadastro_de_usu_rios">Cadastro</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="esqueceu_senha">Esqueceu a sua Senha?</string>
    <string name="clique_aqui">Clique</string>
    <string name="email">Email</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="entrar">Entrar</string>
    <string name="n_o_cadastrado">Não é cadastrado?</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Item 2</string>
    <string name="menu_slideshow">Item 3</string>

    <string name="home_second">Inicio 2</string>
    <string name="n_mades_pizzaria">Nômades Pizzaria</string>
    <string name="nome_do_usu_rio">Nome do usuário</string>
    <string name="email_do_usu_rio">Email do Usuário</string>
    <string name="separador">-</string>
    <string name="bem_vindo_a_nlogin">Bem-Vindo(a)\nLogin</string>
    <string name="bem_vindo_a_nao_nn_mades">Bem-vindo(a)\nao\nNômades</string>
    <string name="confirm_email">Confirme o email</string>
    <string name="redefinir_senha_de_acesso">Redefinir senha \nde\n acesso</string>
    <string name="insira_um_endere_o_de_email_v_lido">Insira o seu endereço de email\n(Utilizado para realizar o login)</string>
    <string name="redefinir">redefinir</string>
    <string name="email_de_recupera_o">Seu email de acesso</string>
    <string name="confirmar">Confirmar</string>
    <string name="bem_vindo_a_ncadastro">Bem-vindo(a)\nCadastro</string>
    <string name="contatos_n_98_3224_1779_n_98_98830_0475">Contatos\n(98)3224-1779\n(98)98830-0475</string>
    <string name="www_engcria_com_br">www.engcria.com.br</string>
    <string name="nada" />
    <string name="sobre">Sobre</string>
    <string name="perfil">Perfil</string>
    <string name="menuinicial">Menu Incial</string>
    <string name="mesdados">Meus Dados</string>
    <string name="meus_pedidos">Meus pedidos</string>
    <string name="long_out">Long-out</string>
    <string name="configura_es">Configurações</string>
    <string name="hist_rico">Histórico</string>
    <string name="encerrar">Encerrar</string>
    <string name="longout">LongOut</string>
    <string name="navega_o">Navegação</string>
    <string name="menu">Lanches diponíveis</string>
    <string name="espaguetes">Espaguetes</string>
    <string name="hamb_rgueres">Hambúrgueres</string>
    <string name="pizzas">Pizzas</string>
    <string name="carregando">Carregando...</string>
    <string name="contatos">Contatos</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="op_es">Opções</string>
    <string name="menu_inicial">Menu Inicial</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pizzas_especiais">Pizzas Especiais</string>
    <string name="atualizar">Atualizar</string>
    <string name="atuliza_o_de_dados_pessoais">Atulização de dados pessoais</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="celular">celular</string>
    <string name="endere_o">Endereço</string>
    <string name="NUMERO">Nº</string>
    <string name="ponto_de_refer_ncia">Ponto de referência</string>
    <string name="meus_dados">Meus Dados</string>
    <string name="cpf_opcional">CPF(opcional)</string>
    <string name="dados_para_entrega">Dados para Entrega</string>
    <string name="s_o_jos_de_ribamar">São josé de Ribamar</string>
    <string name="cidade_dispon_veis">Cidade disponíveis</string>
    <string name="Rua">Rua</string>
    <string name="bairro">Bairro</string>
    <string name="ponto_de_refer_ncia_opcional">Ponto de referência(opcional)</string>
    <string name="adicionar">Adicionar</string>
    <string name="chat">Chat</string>
</resources>
