<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/aa"
        android:checkableBehavior="single">
        <item android:title="@string/perfil">
            <menu>
                <item
                    android:id="@+id/menuinicial"
                    android:icon="@drawable/ic_home_black_24dp"
                    android:title="@string/menu_inicial" />
                <item
                    android:id="@+id/perfil"
                    android:icon="@drawable/perfil_user"
                    android:title="@string/perfil"
                    />
                <item
                    android:id="@+id/pedidos"
                    android:icon="@drawable/meus_pedidos"
                    android:title="@string/meus_pedidos"
                    />
                <item
                    android:id="@+id/historico"
                    android:icon="@drawable/ic_historico"
                    android:title="@string/hist_rico" />
                <item
                    android:id="@+id/chat"
                    android:icon="@drawable/chat_iccon"
                    android:title="@string/chat"
                    />
            </menu>
        </item>
    </group>
    <group android:id="@+id/gupo1" >
        <item android:title="@string/menu">
            <menu>
                <item
                    android:id="@+id/Hamburger"
                    android:icon="@drawable/ic_menu"
                    android:title="@string/hamb_rgueres"
                    />
                <item
                    android:id="@+id/Espaguetes"
                    android:icon="@drawable/ic_menu"
                    android:title="@string/espaguetes"
                    />
                <item
                    android:id="@+id/Pizzas"
                    android:icon="@drawable/ic_menu"
                    android:title="@string/pizzas"
                    />
                <item android:id="@+id/PizzasEspeciais"
                    android:title="@string/pizzas_especiais"
                    android:icon="@drawable/ic_menu"
                    />
            </menu>
        </item>
    </group>
    <group android:id="@+id/grupo2">
        <item android:title="@string/configura_es">
            <menu>
                <item
                    android:id="@+id/configuracoes"
                    android:icon="@drawable/configracoes"
                    android:title="@string/configura_es"
                    />
            </menu>
        </item>
    </group>
    <group android:id="@+id/grupo3">
        <item android:title="@string/contatos">
            <menu>
                <item
                    android:id="@+id/instragram"
                    android:icon="@drawable/newinstagram"
                    android:title="@string/instagram"
                    android:onClick="instagramNomades"
                   />
                <item
                    android:id="@+id/facebook"
                    android:icon="@drawable/ic_face"
                    android:title="@string/facebook"
                    android:onClick="facebookNomades"
                    />
            </menu>
        </item>
    </group>
    <group android:id="@+id/grupo4">
        <item android:title="@string/op_es">
            <menu>
                <item
                    android:id="@+id/lonOut"
                    android:icon="@drawable/ic_encerrar"
                    android:title="@string/longout"
                    android:onClick="LongOut"
                    />
                <item
                    android:id="@+id/encerrar"
                    android:icon="@drawable/ic_long_out"
                    android:title="@string/encerrar"
                    />
                <item
                    android:id="@+id/sobre"
                    android:icon="@drawable/ic_sobre"
                    android:title="@string/sobre"
                    android:onClick="Sobre"
                    />
            </menu>
        </item>
    </group>
</menu>
