<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plano_fundo_final"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linerar"
        android:layout_width="0dp"
        android:layout_height="260dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/cor_linear_telas"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/geomanist_bold"
            android:text="@string/bem_vindo_a_nao_nn_mades"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/text_fonts"
            android:text="@string/saudacao_inferior"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/textViewEspaco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/separador"
            android:textColor="@color/bordar"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/botao_selecionado"
            android:fontFamily="@font/geomanist_regular"
            android:onClick="loguin"
            android:text="@string/entrar"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/separador"
            android:textColor="@color/bordar"
            android:textSize="1sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/botao_selecionado"
            android:fontFamily="@font/geomanist_regular"
            android:onClick="cadastro"
            android:text="@string/registre_se"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="152dp"
        android:layout_height="117dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/linerar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372"
        app:srcCompat="@drawable/logoanomades" />
</androidx.constraintlayout.widget.ConstraintLayout>