<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/plano_fundo_final">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/telaAcoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".meupedidos.MeusPedidosFragment">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginLeft="19dp"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="19dp"
            android:background="@drawable/cor_linear_telas"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/geomanist_regular"
                android:text="@string/nome_completo"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/caixa_texto_loguin"
                android:ems="10"
                android:fontFamily="@font/geomanist_medium"
                android:inputType="textPersonName"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/geomanist_regular"
                android:text="@string/cpf_opcional"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputCPF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/caixa_texto_loguin"
                android:ems="10"
                android:fontFamily="@font/geomanist_medium"
                android:inputType="number"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/geomanist_regular"
                android:text="@string/celular"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/caixa_texto_loguin"
                android:ems="10"
                android:fontFamily="@font/geomanist_medium"
                android:inputType="number"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/geomanist_regular"
                android:text="@string/email"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/caixa_texto_loguin"
                android:clickable="false"
                android:editable="false"
                android:ems="10"
                android:enabled="false"
                android:fontFamily="@font/geomanist_medium"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/geomanist_medium"
                android:text="@string/dados_para_entrega"
                android:textColor="@android:color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/geomanist_regular"
                android:text="@string/cidade_dispon_veis"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBoxCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/cor_linear_telas"
                android:fontFamily="@font/geomanist_medium"
                android:text="@string/s_o_jos_de_ribamar"
                android:textColor="@android:color/white"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/geomanist_regular"
                android:text="@string/Rua"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputRua"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/caixa_texto_loguin"
                android:ems="10"
                android:fontFamily="@font/geomanist_medium"
                android:inputType="textPostalAddress"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/geomanist_regular"
                android:text="@string/NUMERO"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputNumeroCasa"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/caixa_texto_loguin"
                android:ems="10"
                android:fontFamily="@font/geomanist_medium"
                android:inputType="number"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/geomanist_regular"
                android:text="@string/bairro"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputBairro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/caixa_texto_loguin"
                android:ems="10"
                android:fontFamily="@font/geomanist_medium"
                android:inputType="textAutoComplete"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/geomanist_regular"
                android:text="@string/ponto_de_refer_ncia_opcional"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputPontoReferencia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/caixa_texto_loguin"
                android:ems="10"
                android:fontFamily="@font/geomanist_medium"
                android:inputType="textMultiLine"
                android:maxLines="2"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_margin="15dp"
                android:text="@string/adicionar"
                android:onClick="adicionarDados"
                android:background="@drawable/botao_selecionado"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputPontoReferencia" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="19dp"
            android:fontFamily="@font/geomanist_bold"
            android:text="@string/meus_dados"
            android:textColor="@android:color/white"
            android:textSize="29sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>